--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,9 @@ theme = "massively"
   languageName = "English"
  [[menu.main]]
     name = "Tanztitel"
-    url = "/"
+    url = "/Tanztitel/"
     weight = 1
+    
+       
+
 
